fixing permission denied issue with gradle in github actions

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -10,7 +10,9 @@ jobs:
         with:
           java-version: 19
           distribution: 'adopt'
-      - name: Runn unit tests'
+      - name: Make gradlew executable
+        run: chmod +x ./gradlew
+      - name: Run unit tests'
         run: ./gradlew clean test --info
       - name: Build with Gradle
         run: ./gradlew build
