--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,7 +1,7 @@
 name: CI
 on: [push]
 jobs:
-  build-package:
+  run-tests-build-package:
 
     runs-on: ubuntu-latest
 
@@ -19,7 +19,7 @@ jobs:
 
       - name: Run tests with Maven
         run: |
-          mvn -B test --file pom.xml
+          mvn -B test --file pom.xml surefire-report:report site -DgenerateReports=false
           mkdir reports && cp target/site
 
       - name: Persist generated reports as artifacts
