--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -19,13 +19,16 @@ jobs:
 
       - name: Run tests with Maven
         run: |
-          mvn -B test --file pom.xml surefire-report:report site -DgenerateReports=false
+          mvn -B test --file pom.xml surefire-report:report site -DgenerateReports=false -Dmaven.test.failure.ignore=true
 
       - name: Publish Test Results
-        uses: mikepenz/action-junit-report@v3
-        if: success() || failure()
+        uses: dorny/test-reporter@v1
+        if: always()
         with:
-          report_paths: '**/target/sunfire-reports/TEST-*.xml'
+          name: Maven Tests
+          path: target/sunfire-reports/*.xml
+          reporter: java-junit
+          fail-on-error: true
 
       - name: Build project with Maven
         run: |
