--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -26,7 +26,7 @@ jobs:
         if: always()
         with:
           name: Maven Tests
-          path: target/sunfire-reports/*.xml
+          path: target/surefire-reports/*.xml
           reporter: java-junit
           fail-on-error: true
 
